chore: (ART-10688) refactor